# kubevirt

./: BUILD.bazel  WORKSPACE  go.mod  go.sum
api/: api-rule-violations-known.list  api-rule-violations.list
api/openapi-spec/: swagger.json
cmd/dedicated-cpu-container/: BUILD.bazel
cmd/virt-launcher/: BUILD.bazel
examples/: vmi-fedora-dedicated.yaml
hack/: bazel-build-images.sh  bazel-build.sh  bazel-generate.sh  bazel-push-images.sh  config-default.sh  dockerized
hack/builder/: version.sh
images/nfs-server/: BUILD.bazel
pkg/controller/: virtinformers.go
pkg/ephemeral-disk-utils/: generated_mock_utils.go
pkg/hooks/: generated_mock_manager.go
pkg/network/dhcp/: generated_mock_configurator.go
pkg/network/driver/: generated_mock_common.go
pkg/plugins/cel/: BUILD.bazel  deepmerge.go  deepmerge_test.go  domain.go  domain_test.go  evaluator.go  evaluator_test.go  provider.go  types_test.go
pkg/storage/backend-storage/: backend-storage.go
pkg/virt-api/: api.go
pkg/virt-config/: feature-gates.go  virt-config.go
pkg/virt-handler/: BUILD.bazel  migration-target.go  vm.go  vm_test.go
pkg/virt-operator/: kubevirt_test.go
tests/: BUILD.bazel  clone_test.go  migration_test.go  plugin_test.go  utils.go  vmi_configuration_test.go  vmi_headless_test.go
tests/hotplug/: BUILD.bazel  cpu.go
tests/libvmi/: cgroup.go
tests/monitoring/: vm_monitoring.go
tests/operator/: operator.go
tests/performance/: BUILD.bazel  vmi-stress.go
tests/storage/: nfs_failover.go  restore.go  snapshot.go
tests/testsuite/: kubevirtresource.go
(+90 files in other folders)
